removed extra quote

--- a/secrets.json.example
+++ b/secrets.json.example
@@ -2,6 +2,6 @@
   "he_tunnelbroker": {
     "tunnel_id": "123456",
     "username": "your_username",
-    "update_key": "Sup3rS3cr3tP@ssw0rd!""
+    "update_key": "Sup3rS3cr3tP@ssw0rd!"
   }
 }
